<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Input for custom pet type -->
    <EditText
        android:id="@+id/custom_pet_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_custom_pet_type"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/custom_pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_custom_pet_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/save_custom_pet_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_custom_pet" />

</LinearLayout>
